Fix contrast

--- a/css/style.css
+++ b/css/style.css
@@ -104,6 +104,10 @@ footer {
     margin-top: 50px;
 }
 
+footer a {
+    color: #72c0b7;
+}
+
 footer>div {
     padding: 20px;
 }
